# sinix

./: .eslintrc.js  .gitignore  .prettierrc  .travis.yml  FUNDING.yml  LICENSE  README.md  index.js  main.js  nuxt.config.js  package-lock.json  package.json  rollup.config.js  schema.graphql  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: publish.yml
assets/: main.css
components/: ActiveDevices.vue  ConnectedDevices.vue  Device.vue  Loading.vue  Navbar.vue  Rightbar.vue  Searchbar.vue  Sidebar.vue  card.vue  device_indicator.vue  sidebar.vue
layouts/: default.vue
pages/: collections.vue  developer-options.vue  explore.vue  index.vue  installed.vue  logs.vue  settings.vue
plugins/: feather-icons.js  themes-toggle.js
public/: global.css  index.html
public/javascripts/: script.js
src/: App.svelte  app.svelte  main.js  mutation.js  query.js  resolver.js  resolvers.js  routes.js  schema.js  server.js  service-worker.js  socket.js  subscription.js  template.html  typedefs.js
src-tauri/: Cargo.toml  tauri.conf.json  udp-test-client.py
src-tauri/src/: config.rs  constants.rs  db.rs  event_handlers.rs  game.rs  game_webview.rs  handler.rs  lib.rs  main.rs  models.rs  root.rs  server.rs  udp_server.rs  ws.rs
src-tauri/src/channel/: handler.rs  mod.rs  ws.rs
src-tauri/src/joystick/: handler.rs  mod.rs  udp.rs
src-tauri/src/plugins/: game.rs  game_webview.rs  mod.rs  root.rs  udp_server.rs
src-tauri/src/routes/: channel.rs  game.rs  health.rs  mod.rs
src-tauri/src/routes/channel/: handler.rs
src-tauri/src/services/: game.rs  mod.rs
src-tauri/src/services/game/: config.rs  extract_and_copy.rs  install.rs  mod.rs  rename.rs  serve.rs
src-tauri/src/services/steam/: config.rs  mod.rs  util.rs
src/components/: NavLink.svelte  Sidebar.svelte
src/pages/: home.svelte
src/routes/: _layout.svelte  index.svelte
static/: global.css
