[package]
name = "sinix-desktop"
version = "0.1.0"
description = "Sinix Desktop"
authors = [ "Sanket Chaudhari" ]
license = "MIT"
repository = "https://github.com/sinix-dev/sinix"
default-run = "sinix"
edition = "2018"
build = "src/build.rs"

[dependencies]
zip = "0.5"
dirs = "3.0"
warp = "0.2"
tauri = { version = "0.9", features = [ "all-api" ] }
pickledb = "0.4"
actix-rt = "1.1"
actix-web = "2.0"
env_logger = "0.7"
actix-files = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
futures = { version = "0.3", default-features = false }
tokio = { version = "0.2", features = [ "macros", "sync" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "sinix"
path = "src/main.rs"
