[package]
name = "sinix"
version = "0.1.0-alpha.0"
description = "Sinix Desktop"
authors = [ "Sanket Chaudhari" ]
license = "MIT"
repository = "https://github.com/sinix-dev/sinix"
default-run = "sinix"
edition = "2018"
build = "src/build.rs"

[dependencies]
zip = "0.5"
warp = "0.2"
serde_json = "1.0"
env_logger = "0.7"
webview_official = "0.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }
futures = { version = "0.3", default-features = false }
tokio = { version = "0.2", features = [ "macros", "sync" ] }
reqwest = { version = "0.11", features = [ "blocking", "json" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "sinix"
path = "src/main.rs"
