[package]
name = "sinix"
version = "0.1.0-alpha.0"
description = "Sinix Desktop"
authors = ["Sanket Chaudhari"]
license = "MIT"
repository = "https://github.com/sinix-dev/sinix"
default-run = "sinix"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[dependencies]
regex = "1.5"
serde_json = "1.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.5", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
